--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 pyvesplit-terminal by Neil Stevens
 
-Based on livesplit-one-terminal
+Based on livesplit-one-terminal by Christopher Serr
 https://github.com/CryZe/livesplit-one-terminal
