--- a/TODO
+++ b/TODO
@@ -1,7 +1,9 @@
-- Use Hotkey System
+- Default text/background/border colors
 
 - How are best splits handled, do I need to save them?
 
+- Implement all the settings in the config for each component
+
 - Save As
 
-- Default text/background/border colors
+- Use Hotkey System
