Use pyfiglet to print timers.  Tighten up the config use now that we're having more and more default values to worry about.

--- a/README
+++ b/README
@@ -11,6 +11,10 @@ https://www.python.org
 livesplit-core
 https://github.com/CryZe/livesplit-core
 
+pyfiglet
+pip install pyfiglet
+https://github.com/pwaller/pyfiglet
+
 urwid
 pip install urwid
 http://urwid.org
