--- a/README
+++ b/README
@@ -3,6 +3,8 @@ pyvesplit-terminal by Neil Stevens
 Based on livesplit-one-terminal by Christopher Serr
 https://github.com/CryZe/livesplit-one-terminal
 
+---
+
 Requirements:
 
 python 2.6+ or python 3
@@ -22,3 +24,18 @@ http://urwid.org
 x256
 pip install x256
 https://github.com/magarcia/python-x256
+
+---
+
+Monospace fonts to use:
+
+3x5
+4x4_offr
+5x7
+6x10
+6x9
+atc_gran
+contessa
+contrast
+digital
+f15_____
